# todox

./: .todo-scan.toml  .todox.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  action.yml  dist-workspace.toml  renovate.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: workflow-retro.md
.claude/skills/todo-scan/: SKILL.md
.config/: nextest.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
benches/: bench_cache.sh
docs/: DEVELOPMENT_WORKFLOW.md  HOOKS.md
schema/: todo-scan.schema.json  todox.schema.json
skills/todo-scan/: SKILL.md
src/: blame.rs  brief.rs  cache.rs  check.rs  clean.rs  cli.rs  completions.rs  config.rs  context.rs  date_utils.rs  deadline.rs  diff.rs  git.rs  init.rs  lint.rs  main.rs  model.rs  relate.rs  report.rs  scanner.rs  search.rs  stats.rs  tasks.rs  test_helpers.rs  watch.rs  workspace.rs
src/cmd/: blame.rs  brief.rs  check.rs  clean.rs  context.rs  diff.rs  filter.rs  lint.rs  list.rs  mod.rs  relate.rs  report.rs  search.rs  stats.rs  tasks.rs  workspace.rs
src/output/: github_actions.rs  html.rs  markdown.rs  mod.rs  sarif.rs
tests/: integration_blame.rs  integration_brief.rs  integration_cache.rs  integration_check.rs  integration_clean.rs  integration_completions.rs  integration_context.rs  integration_diff.rs  integration_init.rs  integration_lint.rs  integration_list.rs  integration_relate.rs  integration_report.rs  integration_search.rs  integration_stats.rs  integration_tasks.rs  integration_watch.rs  integration_workspace.rs
