[package]
name = "todox"
version = "0.1.0"
edition = "2021"
description = "Track TODO/FIXME/HACK comments with git-aware diff and CI gate"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
colored = "3"
anyhow = "1"
dialoguer = "0.11"
clap_complete = "4"
toml_edit = "0.22"
thiserror = "2"
time = { version = "0.3", features = ["local-offset"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
