[package]
name = "todo-scan"
version = "0.1.0"
edition = "2021"
description = "Track TODO/FIXME/HACK comments with git-aware diff and CI gate"
license = "MIT"
repository = "https://github.com/sotayamashita/todo-scan"
homepage = "https://github.com/sotayamashita/todo-scan"
keywords = ["todo", "fixme", "ci", "lint", "code-quality"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "tests/",
    "docs/",
    ".github/",
    ".claude/",
    ".claude-plugin/",
    "benches/",
    "skills/",
    "schema/",
    "renovate.json",
    ".todo-scan.toml",
    "CLAUDE.md",
    "action.yml",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
schemars = { version = "1.0", features = ["derive"] }
colored = "3"
anyhow = "1"
dialoguer = "0.12"
clap_complete = "4"
toml_edit = "0.25"
time = { version = "0.3", features = ["local-offset"] }
notify = "8"
notify-debouncer-mini = "0.7"
ctrlc = "3"
blake3 = "1"
bincode = "1"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
